user auth added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,13 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "components/Auth Modal/ModalBox.jsx",
+    "components/Top session/Header.jsx",
+    "pages/nft/[id].jsx"
+  ],
   "exclude": ["node_modules"]
 }
