--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ethers": "^5.6.2",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
